# ARC-sample-agent2

./: .env.example  .gitignore  4 tasks_gemini.md  AGENTS.md  ARC_AGENT.md  ARC_agents.md  Makefile  README.md  agent.py  batch_runs.example.json  cost.json  execution_log.py  full batch_gpt4.1-mini.md  harness.py  harness_versions.md  main.py  model_harness_issue_report.md  pyproject.toml  requirements.txt  run_batches.py  run_logging.py  trace_task_run.py  upstream_import_summary.md
.claude/: settings.local.json
logs/: harness_versions.md
logs/old_dont read/: b_15052026_1823_001.json  b_15052026_1858_002.json  b_15052026_1945_003.json  b_15052026_1945_003_summary.json  b_15052026_2034_004.json  b_15052026_2034_004_summary.json  t_15052026_1757_001.json  t_15052026_1801_002.json  t_16052026_1110_001.json  t_16052026_1322_002.json  t_16052026_1323_003.json  t_16052026_1323_004.json  t_16052026_1405_005.json  t_16052026_1407_006.json  t_16052026_1412_007.json  t_16052026_1415_008.json  t_16052026_1419_009.json  t_16052026_1529_010.json
tests/: test_provider_strategy.py
